# Dp-Homework3-2

./: CMakeLists.txt  ErrorObserver.cpp  ErrorObserver.h  FatalErrorObserver.cpp  FatalErrorObserver.h  LogObserver.cpp  LogObserver.h  ObservableLoggingSubject.cpp  ObservableLoggingSubject.h  README.MD  WarningObserver.cpp  WarningObserver.h  main.cpp
